--- a/assets/StyleSheet/main.css
+++ b/assets/StyleSheet/main.css
@@ -1,9 +1,22 @@
 /* <========== Colors ========> */
-/* <========== Variable-maps =======> */
+/* <========== Variable-Maps =======> */
 /* <========== Fonts ========> */
-/* <========== transitions ========> */
-/*----- text colors -----*/
+/* <========== Transitions ========> */
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&display=swap");
+.section-one, .header, .navbar .brand-and-toggler, .navbar .navbar-brand, .navbar {
+  display: flex;
+  align-items: center;
+}
+
+.section-one .section-one-r .lg-title, .header-content .lg-title {
+  padding: 1.4rem 0;
+  font-size: 37px;
+  line-height: 1.4;
+  color: #1e2532;
+  font-weight: 800;
+}
+
+/*----- text colors -----*/
 .text-blue {
   color: #1A91F0;
 }
@@ -216,9 +229,10 @@ a {
 .menu-btn {
   font-size: 35px;
   transition: all 0.3s ease-in-out;
+  color: #1A91F0;
 }
 .menu-btn:hover {
-  color: #1A91F0;
+  color: #1e2532;
 }
 
 .btn {
@@ -266,22 +280,19 @@ a {
 
 .navbar {
   height: 80px;
-  display: flex;
-  align-items: center;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 .navbar .container {
   width: 100%;
 }
 .navbar .navbar-brand {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-end;
   font-size: 1.8rem;
 }
 .navbar .navbar-brand-text {
   color: #1e2532;
   font-weight: 700;
+  font-size: 23px;
 }
 .navbar .navbar-brand-text span {
   color: #1A91F0;
@@ -292,7 +303,82 @@ a {
   opacity: 0.8;
 }
 .navbar .brand-and-toggler {
-  display: flex;
-  align-items: center;
   justify-content: space-between;
+}
+
+.header {
+  min-height: calc(100vh - 80px);
+  justify-content: center;
+  flex-direction: column;
+}
+.header-content {
+  max-width: 750px;
+  margin: 0 auto;
+}
+.header-content img {
+  max-width: 750px;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  margin-top: 3.2rem;
+}
+.header-content p {
+  margin-bottom: 2.6rem;
+  line-height: 1.6;
+}
+.header-content .sub-title {
+  margin-top: 1.5rem;
+  font-weight: 600;
+}
+
+.section-one {
+  padding: 8rem 0;
+  min-height: 80vh;
+}
+.section-one .section-one-l img {
+  max-width: 750px;
+  margin: 0 auto;
+}
+.section-one .btn-group {
+  margin-top: 2rem;
+}
+.section-one .section-one-r {
+  max-width: 545px;
+  margin: 0 auto;
+}
+.section-one .section-one-r img {
+  margin-top: 4rem;
+}
+.section-one .section-one-r .text {
+  color: #1e2532;
+  opacity: 0.9;
+  margin: 2rem 0;
+  line-height: 1.6;
+  font-size: 18px;
+}
+
+/* responsive */
+@media screen and (min-width: 768px) {
+  .section-two .section-items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 992px) {
+  .section-one-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
+  .section-one-r {
+    text-align: left;
+  }
+  .section-two .section-items {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .section-two .section-item {
+    text-align: left;
+  }
+  .section-two .section-item-icon img {
+    margin-left: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
