--- a/assets/StyleSheet/main.css
+++ b/assets/StyleSheet/main.css
@@ -3,7 +3,7 @@
 /* <========== Fonts ========> */
 /* <========== Transitions ========> */
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&display=swap");
-.section-one, .header, .navbar .brand-and-toggler, .navbar .navbar-brand, .navbar {
+.section-one .btn-group, .section-one, .navbar .brand-and-toggler, .navbar .navbar-brand, .navbar, .modal-container, .header {
   display: flex;
   align-items: center;
 }
@@ -272,6 +272,71 @@ a {
   margin-right: 1rem !important;
 }
 
+.header {
+  min-height: calc(100vh - 80px);
+  justify-content: center;
+  flex-direction: column;
+}
+.header-content {
+  max-width: 750px;
+  margin: 0 auto;
+}
+.header-content img {
+  max-width: 750px;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  margin-top: 3.2rem;
+}
+.header-content p {
+  margin-bottom: 2.6rem;
+  line-height: 1.6;
+}
+.header-content .sub-title {
+  margin-top: 1.5rem;
+  font-weight: 600;
+}
+
+.modal {
+  max-width: 200px;
+}
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: all 0.3s ease-in-out;
+  justify-content: center;
+}
+.modal-container video {
+  width: 90%;
+  max-width: 800px;
+  transform: scale(0);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 8px;
+  outline: none;
+  transition: all 0.3s ease-in-out;
+}
+.modal-container.show {
+  pointer-events: all;
+  visibility: visible;
+  opacity: 1;
+}
+.modal-container.show video {
+  transform: scale(1);
+}
+.modal-close {
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  font-size: 30px;
+  cursor: pointer;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -306,30 +371,6 @@ a {
   justify-content: space-between;
 }
 
-.header {
-  min-height: calc(100vh - 80px);
-  justify-content: center;
-  flex-direction: column;
-}
-.header-content {
-  max-width: 750px;
-  margin: 0 auto;
-}
-.header-content img {
-  max-width: 750px;
-  border-top-right-radius: 8px;
-  border-top-left-radius: 8px;
-  margin-top: 3.2rem;
-}
-.header-content p {
-  margin-bottom: 2.6rem;
-  line-height: 1.6;
-}
-.header-content .sub-title {
-  margin-top: 1.5rem;
-  font-weight: 600;
-}
-
 .section-one {
   padding: 8rem 0;
   min-height: 80vh;
@@ -340,6 +381,7 @@ a {
 }
 .section-one .btn-group {
   margin-top: 2rem;
+  justify-content: flex-start;
 }
 .section-one .section-one-r {
   max-width: 545px;
@@ -351,7 +393,7 @@ a {
 .section-one .section-one-r .text {
   color: #1e2532;
   opacity: 0.9;
-  margin: 2rem 0;
+  padding: 2rem 0;
   line-height: 1.6;
   font-size: 18px;
 }
