--- a/assets/Scss/layout/__layout.-dir.scss
+++ b/assets/Scss/layout/__layout.-dir.scss
@@ -1,3 +1,6 @@
 @import "./nav-bar";
 @import "./header";
 @import "./video-modal";
+@import "./section-one";
+@import "./section-two";
+@import "./footer";
