--- a/assets/StyleSheet/main.css
+++ b/assets/StyleSheet/main.css
@@ -3,7 +3,7 @@
 /* <========== Fonts ========> */
 /* <========== Transitions ========> */
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&display=swap");
-.section-one .btn-group, .section-one, .navbar .brand-and-toggler, .navbar .navbar-brand, .navbar, .modal-container, .header {
+.section-one .btn-group, .section-one, .modal-container, .header, .navbar .brand-and-toggler, .navbar .navbar-brand, .navbar {
   display: flex;
   align-items: center;
 }
@@ -226,6 +226,20 @@ a {
   text-decoration: none;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1.6rem;
+}
+
+.text {
+  color: #1e2532;
+  opacity: 0.9;
+  padding: 1rem 0;
+  line-height: 1.6;
+  font-size: 18px;
+}
+
 .menu-btn {
   font-size: 35px;
   transition: all 0.3s ease-in-out;
@@ -270,6 +284,34 @@ a {
 .btn-group button:first-child,
 .btn-group a:first-child {
   margin-right: 1rem !important;
+}
+
+.navbar {
+  height: 80px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+.navbar .container {
+  width: 100%;
+}
+.navbar .navbar-brand {
+  justify-content: flex-end;
+  font-size: 1.8rem;
+}
+.navbar .navbar-brand-text {
+  color: #1e2532;
+  font-weight: 700;
+  font-size: 23px;
+}
+.navbar .navbar-brand-text span {
+  color: #1A91F0;
+}
+.navbar .navbar-brand-icon {
+  width: 25px;
+  margin-right: 6px;
+  opacity: 0.8;
+}
+.navbar .brand-and-toggler {
+  justify-content: space-between;
 }
 
 .header {
@@ -337,40 +379,6 @@ a {
   cursor: pointer;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1.6rem;
-}
-
-.navbar {
-  height: 80px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-.navbar .container {
-  width: 100%;
-}
-.navbar .navbar-brand {
-  justify-content: flex-end;
-  font-size: 1.8rem;
-}
-.navbar .navbar-brand-text {
-  color: #1e2532;
-  font-weight: 700;
-  font-size: 23px;
-}
-.navbar .navbar-brand-text span {
-  color: #1A91F0;
-}
-.navbar .navbar-brand-icon {
-  width: 25px;
-  margin-right: 6px;
-  opacity: 0.8;
-}
-.navbar .brand-and-toggler {
-  justify-content: space-between;
-}
-
 .section-one {
   padding: 8rem 0;
   min-height: 80vh;
@@ -390,12 +398,43 @@ a {
 .section-one .section-one-r img {
   margin-top: 4rem;
 }
-.section-one .section-one-r .text {
-  color: #1e2532;
-  opacity: 0.9;
-  padding: 2rem 0;
-  line-height: 1.6;
-  font-size: 18px;
+.section-two {
+  padding: 64px 0;
+}
+.section-two .section-items {
+  display: grid;
+  gap: 2rem;
+}
+.section-two .section-items .section-item {
+  max-width: 350px;
+  margin: 0 auto;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.section-two .section-items .section-item-icon {
+  margin: 1rem 0;
+}
+.section-two .section-items .section-item-icon img {
+  margin: 0 auto;
+}
+.section-two .section-items .section-item-title {
+  color: #1A1C6A;
+  font-size: 2rem;
+  font-weight: 700;
+}
+.section-two .section-items .text {
+  margin: 0.9rem 0;
+}
+
+.footer {
+  padding: 3rem 0;
+}
+.footer .footer-content p {
+  color: #656e83;
+}
+.footer .footer-content p span {
+  color: #fff;
 }
 
 /* responsive */
