cv-preview section ,jquery form-repeater cdn,repeater function added and generateCV function created

--- a/assets/Scss/layout/__layout.-dir.scss
+++ b/assets/Scss/layout/__layout.-dir.scss
@@ -3,4 +3,7 @@
 @import "./video-modal";
 @import "./section-one";
 @import "./section-two";
+@import "./cv-form-block";
+@import "./cv-form-header";
+@import "./cv-preview";
 @import "./footer";
