--- a/assets/Scss/abstracts/_variable.scss
+++ b/assets/Scss/abstracts/_variable.scss
@@ -8,6 +8,7 @@ $clr-dark: #1e2532;
 $clr-black: #000;
 $clr-grey: #656e83;
 $clr-green: #084C41;
+$shadow-color: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 /* <========== Variable-Maps =======> */
 $text-colors: (text-blue: $clr-blue, text-blue-mid: $clr-blue-mid, text-blue-dark: $clr-blue-dark, text-bright: $clr-bright, text-dark: $clr-dark, text-gray: $clr-grey, text-white: $clr-white);
 $bg-colors: (bg-blue: $clr-blue, bg-blue-mid: $clr-blue-mid, bg-blue-dark: $clr-blue-dark, bg-bright: $clr-bright, bg-dark: $clr-dark, bg-gray: $clr-grey, bg-white: $clr-white);
