--- a/assets/Scss/layout/_nav-bar.scss
+++ b/assets/Scss/layout/_nav-bar.scss
@@ -1,7 +1,7 @@
 .navbar {
     height: 80px;
     @include flex-box(null);
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    box-shadow: $shadow-color;
 
     .container {
         width: 100%;
