--- a/assets/Scss/layout/_video-modal.scss
+++ b/assets/Scss/layout/_video-modal.scss
@@ -8,7 +8,7 @@
         width: 100%;
         height: 100%;
         z-index: 99;
-        background-color: rgba(0, 0, 0, 0.4);
+        background-color: rgba(0, 0, 0, 0.5);
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
@@ -19,7 +19,7 @@
             width: 90%;
             max-width: 800px;
             transform: scale(0);
-            box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 8px;
+            box-shadow: $shadow-color;
             outline: none;
             transition: $transition;
         }
