--- a/assets/Scss/main.scss
+++ b/assets/Scss/main.scss
@@ -5,53 +5,21 @@
 
 .about {
     padding: 64px 0;
-
 }
 
-.cv-form-block {
-    margin: 3rem 0;
+.cv-form-header {
+    .header-container {
+        margin-top: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-    .cv-form-row-title {
-        background-color: $clr-dark;
-        padding: 0.8rem 1.6rem;
-        margin-bottom: 2rem;
-
-        h3 {
-            color: $clr-white;
-            font-weight: 500;
-            text-transform: uppercase;
-            letter-spacing: 1.5px;
-            font-size: 1.7rem;
-        }
-    }
-
-    .cv-form-row {
-        padding: 3rem 2rem 0 2rem;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        margin-bottom: 1rem;
-        position: relative;
-
-        .cols-3,
-        .cols-2 {
-            display: grid;
-        }
-
-        .form-element {
-            margin-bottom: 3rem;
-            position: relative;
-
-            .form-text {
-                color: #ca0b00;
-                font-size: 12px;
-                position: absolute;
-                letter-spacing: 0.5px;
-                top: calc(100% + 2px);
-                left: 0;
-                width: 100%;
-            }
+        .title {
+            font-size: 40px;
         }
     }
 }
+
 
 /* responsive */
 @media screen and (min-width: 768px) {
