--- a/assets/StyleSheet/main.css
+++ b/assets/StyleSheet/main.css
@@ -337,7 +337,7 @@ a {
 
 .navbar {
   height: 80px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .navbar .container {
   width: 100%;
@@ -397,7 +397,7 @@ a {
   width: 100%;
   height: 100%;
   z-index: 99;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -408,7 +408,7 @@ a {
   width: 90%;
   max-width: 800px;
   transform: scale(0);
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   outline: none;
   transition: all 0.3s ease-in-out;
 }
@@ -476,27 +476,14 @@ a {
   margin: 0.9rem 0;
 }
 
-.footer {
-  padding: 3rem 0;
-}
-.footer .footer-content p {
-  color: #656e83;
-}
-.footer .footer-content p span {
-  color: #fff;
-}
-
-.about {
-  padding: 64px 0;
-}
-
 .cv-form-block {
   margin: 3rem 0;
 }
 .cv-form-block .cv-form-row-title {
   background-color: #1e2532;
-  padding: 0.8rem 1.6rem;
+  padding: 1rem 1.6rem;
   margin-bottom: 2rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .cv-form-block .cv-form-row-title h3 {
   color: #fff;
@@ -508,6 +495,7 @@ a {
 .cv-form-block .cv-form-row {
   padding: 3rem 2rem 0 2rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   margin-bottom: 1rem;
   position: relative;
 }
@@ -527,6 +515,74 @@ a {
   top: calc(100% + 2px);
   left: 0;
   width: 100%;
+}
+
+.preview-container {
+  border-radius: 5px;
+  display: grid;
+  grid-template-columns: 32% auto;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  overflow: hidden;
+}
+.preview-container-left {
+  padding: 3rem 3rem 2rem 3rem;
+}
+.preview-container-right {
+  padding: 3rem 3rem 3rem 4rem;
+}
+.preview-container .preview-image {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: auto;
+  margin-left: auto;
+}
+.preview-container .preview-image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.preview-container .preview-item-name {
+  font-size: 2.4rem;
+  font-weight: 600;
+  margin: 1.8rem 0;
+  position: relative;
+}
+.preview-container .preview-item-name::before {
+  position: absolute;
+  content: " ";
+  bottom: -10px;
+  width: 50%;
+  height: 1.5px;
+  background-color: #fff;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.footer {
+  padding: 3rem 0;
+}
+.footer .footer-content p {
+  color: #656e83;
+}
+.footer .footer-content p span {
+  color: #fff;
+}
+
+.about {
+  padding: 64px 0;
+}
+
+.cv-form-header .header-container {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cv-form-header .header-container .title {
+  font-size: 40px;
 }
 
 /* responsive */
@@ -554,4 +610,4 @@ a {
   .section-two .section-item-icon img {
     margin-left: 0;
   }
-}/*# sourceMappingURL=main.css.map */
+}
