--- a/assets/Scss/layout/_section-two.scss
+++ b/assets/Scss/layout/_section-two.scss
@@ -7,9 +7,7 @@
 
         .section-item {
             @include img-width(350px);
-            display: flex;
-            align-items: flex-start;
-            flex-direction: column;
+            @include flex-direction(column, null, flex-start);
         }
 
         .section-item-icon {
