--- a/assets/Scss/layout/_header.scss
+++ b/assets/Scss/layout/_header.scss
@@ -1,14 +1,13 @@
 .header {
     min-height: calc(100vh - 80px);
-    @include flex-direction(column);
+    @include flex-direction(column, center, center);
 
     &-content {
         @include img-width(750px);
 
         img {
             max-width: 750px;
-            border-top-right-radius: 8px;
-            border-top-left-radius: 8px;
+            border-radius: 8px 8px 0 0;
             margin-top: 3.2rem;
         }
 
