--- a/assets/Scss/main.scss
+++ b/assets/Scss/main.scss
@@ -10,9 +10,7 @@
 .cv-form-header {
     .header-container {
         margin-top: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @include flex-box(center, center);
 
         .title {
             font-size: 40px;
@@ -21,10 +19,22 @@
 }
 
 
+
+
 /* responsive */
 @media screen and (min-width: 768px) {
     .section-two .section-items {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    .cols-3 {
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 2rem;
+    }
+
+    .cols-2 {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
     }
 }
 
@@ -50,4 +60,16 @@
     .section-two .section-item-icon img {
         margin-left: 0;
     }
+
+    .cv-form-row {
+        padding: 3rem 3rem 0rem 3rem;
+    }
+
+    .cols-3 {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.print-btn-section {
+    margin: 2rem 0 6rem 0;
 }
