--- a/assets/Scss/main.scss
+++ b/assets/Scss/main.scss
@@ -1,22 +1,9 @@
 @import "./abstracts/_abstracts-dir";
 @import "./base/_base-dir";
 @import "./components/_components-dir";
-@import "./layout/_layout.-dir";
+@import "./pages/_pages";
 
-.about {
-    padding: 64px 0;
-}
 
-.cv-form-header {
-    .header-container {
-        margin-top: 40px;
-        @include flex-box(center, center);
-
-        .title {
-            font-size: 40px;
-        }
-    }
-}
 
 
 
